...
                                        if (vacationUiState.selectedFilter == VacationFilter.ARCHIVED)
                                            colorResource(R.color.orange)
                                        else
                                            MaterialTheme.colorScheme.primary.copy(alpha = 0.3f)
                                    )
                                    .clickable { onToggleShowFilterVacations(VacationFilter.ARCHIVED) }
                                    .testTag("archivedVacationViewButton"),
                                contentAlignment = Alignment.Center

                            ) {
                                Row(
                                    verticalAlignment = Alignment.CenterVertically,
                                    horizontalArrangement = Arrangement.Center,
...
                                    )
                                    .clickable {
                                        if (vacationUiState.selectedFilter != VacationFilter.PROJECTS) onToggleShowFilterVacations(
                                            VacationFilter.PROJECTS
                                        )
                                    }
                                    .testTag("vacationViewButton"),
                                contentAlignment = Alignment.Center
                            ) {
                                Text(
                                    text = stringResource(
                                        R.string.homescreen_projects_button,
                                        getSizeVacationFilter(VacationFilter.PROJECTS)
...
                                    )
                                    .clickable {
                                        if (vacationUiState.selectedFilter != VacationFilter.SHARED) onToggleShowFilterVacations(
                                            VacationFilter.SHARED
                                        )
                                    }
                                    .testTag("sharedVacationViewButton"),
                                contentAlignment = Alignment.Center
                            ) {
                                Text(
                                    text = stringResource(
                                        R.string.homescreen_shared_button,
                                        getSizeVacationFilter(VacationFilter.SHARED)
...
                                                Color.White.copy(alpha = 0.1f)
                                            )
                                        ),
                                        shape = RoundedCornerShape(24.dp)
                                    )
                                    .clickable { onNavigate(AppDestinations.INIT_ROUTE) }
                                    .testTag("newVacationButton"),
                                contentAlignment = Alignment.Center,
                            ) {
                                Row(
                                    verticalAlignment = Alignment.CenterVertically,
                                    horizontalArrangement = Arrangement.Center,
                                    modifier = Modifier.padding(horizontal = 24.dp)
...
