<resources>
    <string name="app_name">TripInMind</string>
    <string name="homescreen_next_button">PLAN YOUR NEXT VACATION</string>
    <string name="homescreen_projects_button">My vacations (%1$d)</string>
    <string name="homescreen_archives_button">Archives (%1$d)</string>
    <string name="homescreen_shared_button">Shared (%1$d)</string>
    <string name="homescreen_no_vacation">No vacation planned</string>
    <string name="homescreen_no_archived_vacation">No vacations archived</string>
    <string name="homescreen_no_shared_vacation">No vacations shared</string>
    <string name="homescreen_delete_vacation_title">Delete Vacation</string>
    <string name="homescreen_delete_vacation_message">Are you sure you want to delete this vacation?</string>
    <string name="homescreen_archive_message">Vacation archived!</string>
    <string name="homescreen_unarchive_message">Vacation unarchived!</string>
    <string name="homescreen_share_code_text">Your share code is :\ </string>
    <string name="homescreen_dialog_qrcode_title">QR CODE</string>
...
